--- a/paper3_manuscript.tex
+++ b/paper3_manuscript.tex
@@ -55,7 +55,7 @@ Consider a nominal second-order nonlinear system:
 \dot x_4 &= f_2(\bm x,t)+g_2(\bm x,t)+b_2(\bm x,t)u_2,\label{eq:second-order system}
 \end{split}
 \end{align}
-where $\bm x = [x_1,x_2,x_3,x_4]^T$ is the system state vector ; $f(\bm x,t)$ and $b(\bm x,t)\neq 0$ are smooth nonlinear functions with respect to $\bm x$ and $t$; $u_i$, $i=1,2$ stands for the system input; $g_i(\bm x,t)$, $i=1,2$  is defined as the bounded nonlinear function which satisfies $\Vert g_i(\bm x,t)\Vert\le l_i$, $l_i>0, i=1,2$, meaning uncertainties and disturbances. For the system mentioned above, we can design the desired DTSM surface as:
+where $\bm x = [x_1,x_2,x_3,x_4]^T$ is the system state vector ; $f(\bm x,t)$ and $b(\bm x,t)\neq 0$ are smooth nonlinear functions with respect to $\bm x$ and $t$; $u_i$, $i=1,2$ stands for the system input; $g_i(\bm x,t)$, $i=1,2$  is defined as the bounded nonlinear function that satisfies $\Vert g_i(\bm x,t)\Vert\le l_i$, $l_i>0, i=1,2$, meaning uncertainties and disturbances. For the system mentioned above, we can design the desired DTSM surface as:
 \begin{align}
 \bm s = [s_1,s_2]^T,
 \end{align}
@@ -391,7 +391,7 @@ furthermore, the corresponding input follows to stabilize the system~(\ref{eq:la
 \bm u_2 &= -k\frac{(\bm s^TM_0^{-1}(\bm q))^T}{\Vert\bm s^TM_0^{-1}(\bm q)\Vert}.
 \end{split}
 \end{align}
-in which $k>\mu_0+\mu_1\Vert\bm q\Vert+\mu_2\Vert\dot{\bm q}\Vert^2$, and it's assumed that the parameters $\mu_0$, $\mu_1$ and $\mu_2$ are known.
+where $k>\mu_0+\mu_1\Vert\bm q\Vert+\mu_2\Vert\dot{\bm q}\Vert^2$, and it's assumed that the parameters $\mu_0$, $\mu_1$ and $\mu_2$ are known.
 \end{mythm}
 \begin{proof}
 Select the Lyapunov function
@@ -447,7 +447,7 @@ O_{2\times 2} &\begin{pmatrix}
 \end{pmatrix}.
 \end{split}
 \end{align}\par
-Referring to Theorem \ref{theorem:4}, it's easy to obtain the MDTSM input for the even $n$-link manipulator. Essentially, this technique requires that the sliding mode  surface has to consist of $n/2$ pairs of individual sliding mode  surfaces, in other words, this design for the surface can be regarded to design the sliding mode  surfaces for the $n/2$ sub-systems.\par
+Referring to Theorem \ref{theorem:4}, it's easy to obtain the MDTSM input for the even $n$-link manipulator. Essentially, this technique requires that the sliding mode surface has to consist of $n/2$ pairs of individual sliding mode  surfaces, in other words, this design for the surface can be regarded to design the sliding mode  surfaces for the $n/2$ sub-systems.\par
 Considering the situation that $n$ is an odd number, the $n$-link manipulator as we know is assumed as a full-actuated system, and hence one individual dimension can be controlled by using the conventional TSM control scheme, which results in that the remained $n-1$-link manipulator can be controlled by the proposed MDTSM control scheme.
 \end{myrem}
 \begin{myrem}
@@ -473,7 +473,7 @@ It's obvious that the disturbances in the system~(\ref{eq:simulation second-orde
 \Vert g_1(x,t)\Vert &= \Vert 0.1\sin(20t)\Vert\le 0.1\\
 \Vert g_2(x,t)\Vert &= \Vert 0.3\sin(3t)+0.5e^{-3t}\Vert\le 0.8,
 \end{align*}
-and hence, based on the analyses in Theorem~\ref{theorem:1}, let $l_1>0.1$ and $l_2>0.8$ guarantee the reaching condition of the desired sliding mode  surface. Also, the inputs $u_1$ and $u_2$ can be viewed as virtual input terms which consist of the linear combination of the crucial inputs in system, i.e., for the system~(\ref{eq:simulation second-order system}), the input terms can be expressed by $\bm u = \Xi\bm\tau$ particularly, where $\bm u\in R^2$ is the virtual input vector; $\bm \tau\in R^2$ stands for the crucial input vector; $\Xi\in R^{2\times 2}$ must have full rank.\par
+and hence, based on the analyses in Theorem~\ref{theorem:1}, let $l_1>0.1$ and $l_2>0.8$ guarantee the reaching condition of the desired sliding mode  surface. Also, the inputs $u_1$ and $u_2$ can be viewed as virtual input terms that consist of the linear combination of the crucial inputs in system, i.e., for the system~(\ref{eq:simulation second-order system}), the input terms can be expressed by $\bm u = \Xi\bm\tau$ particularly, where $\bm u\in R^2$ is the virtual input vector; $\bm \tau\in R^2$ stands for the crucial input vector; $\Xi\in R^{2\times 2}$ must have full rank.\par
 The system is supposed to be controlled to the desired condition $\bm x_d=(0,0,0,0)$ from a prescript condition $\bm x_0=(1.2,1.2,1.2,1.2)$. Admittedly, this prescript condition leads to a large initial reaching distance due to the existence of the cubic terms $\gamma x^3$ in the sliding mode  surface, therefore a large reaching speed $k$ is required correspondingly. The control parameters are chosen as: $\alpha = 0.6$, $\lambda = 0.5$, $\gamma = 3$ and $k = 20$. Besides the large reaching speed selected, $\gamma$ accelerates the convergence in the sliding phase indirectly. Therefore the design of the MDTSM controller for the system~(\ref{eq:simulation second-order system}) is finished, and the corresponding simulation results are illustrated from Fig.~\ref{Figure:2} to Fig.~\ref{Figure:3}.
 
 From Fig.~\ref{Figure:2}, it's apparent that all the states converge to zero as desired. \textcolor{red}{For the nominal system~(\ref{eq:simulation second-order system}) handled by utilizing the MDTSM controller, according to Eq.~(\ref{eq:total convergence time}) and simulation data, we can calculate the maximum theoretical finite convergence time $t_f=5.2609s$ directly. The system states, in other words, can be stable in no more than $5.2609s$ theoretically. However, the system response results in Fig.~\ref{Figure:2_20161108} indicate that all the states have been stable after about $1.5s$, which is far less than $t_f$. Hence, from the view of the convergence time, the simulation results are in accordance with the theoretical analyses.} Fig.~\ref{Figure:3} demonstrates the inputs, the amplitudes of which are closely associated with $\eta$, for the purpose of avoiding the large chattering, the boundary layer technique is adopted. Although the states have been driven to the origin and stay there in subsequent time, one can find that the inputs don't maintain constant but fluctuate in a certain range. The nature of the situation mentioned above means that the fluctuating inputs compensate the error caused by the disturbance.\par
@@ -606,7 +606,7 @@ where the main control parameters of which are selected as $\alpha = 0.6$, $\gam
 \end{figure}
 The performance of the controllers mentioned above is illustrated in Fig.~\ref{Figure:4} and Fig.~\ref{Figure:5}. \textcolor{red}{For the MDTSM controller, the joint~1 finishes its desired behavior at about $2.3s$, and meanwhile the joint~2 spends about $1.7s$ completing the desired mission. Also, by observing the results, we can find that the stabilization time of the proposed method is less than the TSM controller's, and the regulating process of the manipulators is steady and reasonable. Through calculation, we can find the maximum theoretical finite convergence time $t_f=3.0843s$, which can be obtained directly according to Eq.~(\ref{eq:total convergence time}) and simulation data, is more than $2.3s$, the convergence time of the simulation result. Hence, we can conclude that the results have verified the analyses about the convergence time in Section~\ref{sec:2}.  The control torques of the joints are depicted in Fig.~\ref{Figure:torque}. It is obvious that the torques of the two joints are both switching dramatically at the beginning, and this phenomenon is caused directly by the rapidly changing sliding mode dynamics $s_i$. Moreover, at about $1.7s$, all the joint states are regulated to locate in the vicinity of the origin, but the sliding mode dynamics do not yet enter the boundary layer $s_i< \delta$. This switching inputs last about $2.7s$ before reaching the boundary layer. After $2.7s$ boundary layer technique works to generate continuous torques, which maintain a reasonable constant in the subsequent time, since the overall system has been stable.} Therefore these results show that the MDTSM control scheme can achieve the regulation of the manipulator effectively.
 
-\textcolor{red}{At this point, we have verified the feasibility of the MDTSM controller on step responses of the joints of the manipulator, and in most engineering applications, manipulators are required to track the variable desired signals, which own the actual physical meanings, such as polish, machine tools and laser beam cutting. Accordingly, the tracking performance of the robotic manipulator controlled by the proposed methods is studied in this section, and we continue to use the parameters of the controller mentioned above, and the mission condition is changed as follows:}
+\textcolor{red}{At this point, we have verified the feasibility of the MDTSM controller on step responses of the joints of the manipulator, and in most engineering applications, manipulators are required to track the variable desired signals, that own the actual physical meanings, such as polish, machine tools and laser beam cutting. Accordingly, the tracking performance of the robotic manipulator controlled by the proposed methods is studied in this section, and we continue to use the parameters of the controller mentioned above, and the mission condition is changed as follows:}
 \begin{align*}
 &(\bm q_0^T, \dot{\bm q}_0^T)= (1.5,1.5,0,0)\\
 &{\bm q}_d^T=(1.25-(1/5)e^{-t}+(1/20)e^{-4t},1.25+(9/40)e^{-t}-(1/4)e^{-2t})
@@ -640,11 +640,11 @@ The performance of the controllers mentioned above is illustrated in Fig.~\ref{F
 \end{figure}
 \textcolor{red}{Here we examine the step response of the adaptive MDTSM control scheme for the robotic manipulator dynamics, since the step response is a severe challenge to the controller. Accordingly, the initial and desired conditions are $(\bm q_0^T, \dot{\bm q}_0^T)= (0.3,0.2,0,0)$ and $({\bm q}_d^T,\dot{\bm q}_d^T)=(1,1,0,0)$, respectively. The design parameters of the adaptive MDTSM controller can be selected as $\varpi_1=50$, $\varpi_2=30$, $\varphi_1=\varphi_2=0.01$, $\nu_1 = 5$, $\nu_2=6$, $\omega_1=\omega_2=1$ to satisfy the parameter conditions in Theorem~\ref{thm:4}. In addition, for better tracking performance, the boundary layer thickness is revised as $\delta=0.1$. }
 
-\textcolor{red}{The results shown in Fig.~\ref{Figure:limitation_torque} indicate that the joint torques are limited in the region $[-50,50]Nm$ from $0s$ to $0.4s$, while the trajectories in the Fig.~\ref{Figure:limitation_q} demonstrates that the manipulator dynamics are still under control. The limitations occur in the beginning stage of the regulation, since the large tracking errors lead to the great command inputs. Moveover the boundary layer technique works after $0.4s$ and generates continuous torques in the subsequent time. Compared to the results in Fig.~\ref{Figure:torque}, we can find that the boundary layer of the adaptive MDTSM controller functions earlier, and this is because that the thickness is modified as $\delta=1\times 10^{-1}$ from $\delta=1\times 10^{-4}$. It implies that $s_i<\delta$ appears earlier for the adaptive MDTSM controller than the MDTSM controller. Also, compared to the results from Fig.~\ref{Figure:4}, we can find that the rise time of the adaptive MDTSM controller is less, although the torques are limited strictly. Hence, we can conclude that the proposed adaptive MDTSM controller can regulate the robotic manipulator subjected to the input limitation, and the control performance is even better than the MDTSM controller for the system without input limitation in some extent.}
+\textcolor{red}{The results shown in Fig.~\ref{Figure:limitation_torque} indicate that the joint torques are limited in the region $[-50,50]Nm$ from $0s$ to $0.4s$, while the trajectories in the Fig.~\ref{Figure:limitation_q} demonstrates that the manipulator dynamics are still under control. The limitations occur in the beginning stage of the regulation, since the large tracking errors lead to the great command inputs. Moreover the boundary layer technique works after $0.4s$ and generates continuous torques in the subsequent time. Compared to the results in Fig.~\ref{Figure:torque}, we can find that the boundary layer of the adaptive MDTSM controller functions earlier, and this is because that the thickness is modified as $\delta=1\times 10^{-1}$ from $\delta=1\times 10^{-4}$. It implies that $s_i<\delta$ appears earlier for the adaptive MDTSM controller than the MDTSM controller. Also, compared to the results from Fig.~\ref{Figure:4}, we can find that the rise time of the adaptive MDTSM controller is less, although the torques are limited strictly. Hence, we can conclude that the proposed adaptive MDTSM controller can regulate the robotic manipulator subjected to the input limitation, and the control performance is even better than the MDTSM controller for the system without input limitation in some extent.}
 \section{Conclusion}\label{sec:5}
 A feasible MDTSM control for n-link robotic manipulator has been presented. The method integrates two individual subsystems as a unity, then builds the surfaces and inputs for it to complete the controller design. The control scheme can guarantee the reaching condition of the desired sliding mode  surface, meanwhile the system states converge to the origin along the desired sliding mode  surface. Also, the entire convergence time can be calculated accordingly. Developing the basic DTSM yields the MDTSM controller, which provides a solution to eliminating chattering, avoiding singularity and fast convergence. For dealing with the underactuated characteristics which may appear in the system, the HDTSM control is derived, and the overhead crane example verifies its effectiveness. However, the control parameters selection is still a challenge especially in the HDTSM control scheme, and we will effort to excavate a full order dual TSM methodology in the future for removing the obstacle caused by parameters essentially.
 \section{Acknowledgment}
-This work is partially supported by the National Natural Science Foundation of China (No. 61104112, 61503101).
+This work is partially supported by the National Natural Science Foundation of China (No. 61104112, 61673009, 61503101, 91438202).
 \section{References}
 \bibliography{paper3_ref}
 \bibliographystyle{elsarticle-num}
